# not-quite-my-tempo

./: .gitignore  README.md  check_camera.py  pyproject.toml  requirements.txt  selftest.py  tray_launcher.py
scripts/: build_dmg.sh  com.bcsutar.not-quite-my-tempo.plist.template  entitlements.plist  install_launch_agent.sh  uninstall_launch_agent.sh
tempo/: controllers.py  detector.py  fake_ai.py  main.py  tray.py
